--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
